@@ -1,27 +1,22 @@
 package es.unican.appriegospersonales.activities.riesgos.tabs;
 
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
-import java.util.LinkedList;
 import java.util.List;
 
-import es.unican.appriegospersonales.common.Callback;
+import es.unican.appriegospersonales.model.Amenaza;
 import es.unican.appriegospersonales.model.Control;
 import es.unican.appriegospersonales.model.Perfil;
-import es.unican.appriegospersonales.model.Riesgo;
 import es.unican.appriegospersonales.repository.CibelRepository;
 import es.unican.appriegospersonales.repository.ICibelRepository;
 import es.unican.appriegospersonales.repository.db.DaoSession;
 import es.unican.appriegospersonales.repository.db.PerfilDao;
-import es.unican.appriegospersonales.repository.db.RiesgoDao;
 
-public class TabRiesgosAppsPresenter implements ITabRiesgosAppsContract.Presenter {
-    private final ITabRiesgosAppsContract.View view;
+public class TabAmenazasAppsPresenter implements ITabAmenazasAppsContract.Presenter {
+    private final ITabAmenazasAppsContract.View view;
     private PerfilDao perfilDao;
     private ICibelRepository repository;
 
-    public TabRiesgosAppsPresenter(ITabRiesgosAppsContract.View view) {
+    public TabAmenazasAppsPresenter(ITabAmenazasAppsContract.View view) {
         this.view = view;
     }
 
@@ -36,10 +31,10 @@ public class TabRiesgosAppsPresenter implements ITabRiesgosAppsContract.Presente
     }
 
     @Override
-    public List<Riesgo> getRiesgosApps() {
-        List<Riesgo> riesgosDeApps = List.of(repository.getRiesgosDeApps());
-        if (riesgosDeApps == null) riesgosDeApps = Collections.emptyList();
-        return riesgosDeApps;
+    public List<Amenaza> getAmenazasApps() {
+        List<Amenaza> amenazasDeApps = List.of(repository.getAmenazasDeApps());
+        if (amenazasDeApps == null) amenazasDeApps = Collections.emptyList();
+        return amenazasDeApps;
     }
 
     @Override
