@@ -3,21 +3,20 @@ package es.unican.appriegospersonales.activities.riesgos.tabs;
 import java.util.Collections;
 import java.util.List;
 
+import es.unican.appriegospersonales.model.Amenaza;
 import es.unican.appriegospersonales.model.Control;
 import es.unican.appriegospersonales.model.Perfil;
-import es.unican.appriegospersonales.model.Riesgo;
 import es.unican.appriegospersonales.repository.CibelRepository;
 import es.unican.appriegospersonales.repository.ICibelRepository;
 import es.unican.appriegospersonales.repository.db.DaoSession;
 import es.unican.appriegospersonales.repository.db.PerfilDao;
-import es.unican.appriegospersonales.repository.db.RiesgoDao;
 
-public class TabRiesgosDevicesPresenter implements  ITabRiesgosDevicesContract.Presenter {
-    private final ITabRiesgosDevicesContract.View view;
+public class TabAmenazasDevicesPresenter implements  ITabAmenazasDevicesContract.Presenter {
+    private final ITabAmenazasDevicesContract.View view;
     private PerfilDao perfilDao;
     private ICibelRepository repository;
 
-    public TabRiesgosDevicesPresenter(ITabRiesgosDevicesContract.View view) {
+    public TabAmenazasDevicesPresenter(ITabAmenazasDevicesContract.View view) {
         this.view = view;
     }
 
@@ -32,10 +31,10 @@ public class TabRiesgosDevicesPresenter implements  ITabRiesgosDevicesContract.P
     }
 
     @Override
-    public List<Riesgo> getRiesgosDevices() {
-        List<Riesgo> riesgosDeDispositivos = List.of(repository.getRiesgosDeDispositivos());
-        if (riesgosDeDispositivos == null) riesgosDeDispositivos = Collections.emptyList();
-        return riesgosDeDispositivos;
+    public List<Amenaza> getAmenazasDevices() {
+        List<Amenaza> amenazasDeDispositivos = List.of(repository.getAmenazasDeDispositivos());
+        if (amenazasDeDispositivos == null) amenazasDeDispositivos = Collections.emptyList();
+        return amenazasDeDispositivos;
     }
 
     @Override
